--- a/404.html
+++ b/404.html
@@ -7,11 +7,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>404 - Page Not Found </title>
+	<title>404 | Page Not Found | Khana Khajana</title>
 
-	<meta name="keywords" content="WebSite Template" />
-	<meta name="description" content="Porto - Multipurpose Website Template">
-	<meta name="author" content="okler.net">
+	<meta name="keywords"
+		content="page not found, 404 error, Indian restaurant website, Khana Khajana 404, missing page, Indian cuisine USA" />
+	<meta name="description"
+		content="Oops! The page you’re looking for isn’t available. Return to Khana Khajana’s homepage and explore our delicious Indian cuisine.">
+	<meta name="author" content="Khana Khajana">
 
 	<!-- Favicon -->
 	<meta property="og:image" content="img/apple-touch-icon.png">
@@ -180,41 +182,15 @@
 
 		<div role="main" class="main">
 
-			<section class="page-header page-header-modern bg-color-grey page-header-lg">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12 align-self-center p-static order-2 text-center">
-							<h1 class="font-weight-bold text-dark">404 - Page Not Found</h1>
-						</div>
-						<div class="col-md-12 align-self-center order-1">
-							<ul class="breadcrumb d-block text-center">
-								<li><a href="#">Home</a></li>
-								<li class="active">Pages</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-
 			<div class="container">
 
 				<section class="http-error">
 					<div class="row justify-content-center py-3">
-						<div class="col-md-7 text-center">
+						<div class="text-center">
 							<div class="http-error-main">
 								<h2>404!</h2>
 								<p>We're sorry, but the page you were looking for doesn't exist.</p>
 							</div>
-						</div>
-						<div class="col-md-4 mt-4 mt-md-0">
-							<h4 class="text-primary">Here are some useful links</h4>
-							<ul class="nav nav-list flex-column">
-								<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">FAQ's</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">Sitemap</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-							</ul>
 						</div>
 					</div>
 				</section>
