--- a/about-us.html
+++ b/about-us.html
@@ -7,11 +7,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>About Us</title>
+	<title>About Khana Khajana | Authentic Indian Cuisine in USA</title>
 
-	<meta name="keywords" content="WebSite Template" />
-	<meta name="description" content="Porto - Multipurpose Website Template">
-	<meta name="author" content="okler.net">
+	<meta name="keywords"
+		content="about Indian restaurant, Khana Khajana story, Indian cuisine USA, traditional Indian food, best Indian restaurant, Indian dining experience" />
+	<meta name="description"
+		content="Discover the story of Khana Khajana, where tradition meets taste. Our passion for authentic Indian cuisine brings you an unforgettable dining experience in the USA.">
+	<meta name="author" content="Khana Khajana">
 
 	<!-- Favicon -->
 	<meta property="og:image" content="img/apple-touch-icon.png">
