--- a/contact-us.html
+++ b/contact-us.html
@@ -7,11 +7,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Contact Us</title>
+	<title>Contact Khana Khajana | Indian Restaurant in USA</title>
 
-	<meta name="keywords" content="WebSite Template" />
-	<meta name="description" content="Porto - Multipurpose Website Template">
-	<meta name="author" content="okler.net">
+	<meta name="keywords"
+		content="contact Indian restaurant, Khana Khajana location, Indian restaurant near me, best Indian food USA, order Indian food, restaurant hours" />
+	<meta name="description"
+		content="Get in touch with Khana Khajana! Visit us for an authentic Indian dining experience or order online. Find our location, opening hours, and contact details here.">
+	<meta name="author" content="Khana Khajana">
 
 	<!-- Favicon -->
 	<meta property="og:image" content="img/apple-touch-icon.png">
