--- a/gallery.html
+++ b/gallery.html
@@ -7,11 +7,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Gallery</title>
+	<title>Food & Ambience Gallery | Khana Khajana Indian Restaurant</title>
 
-	<meta name="keywords" content="WebSite Template" />
-	<meta name="description" content="Porto - Multipurpose Website Template">
-	<meta name="author" content="okler.net">
+	<meta name="keywords"
+		content="Indian food gallery, restaurant ambiance, vegetarian Indian dishes, best Indian food USA, Khana Khajana photos, Indian dining experience" />
+	<meta name="description"
+		content="Take a visual journey through Khana Khajana! Explore our mouthwatering Indian vegetarian dishes and the warm, inviting ambiance of our restaurant in the USA.">
+	<meta name="author" content="Khana Khajana">
 
 	<!-- Favicon -->
 	<meta property="og:image" content="img/apple-touch-icon.png">
