--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Home</title>
+	<title>Khana Khajana | Authentic Indian Restaurant in USA | Home</title>
 
-	<meta name="keywords" content="WebSite Template" />
-	<meta name="description" content="Porto - Multipurpose Website Template">
-	<meta name="author" content="okler.net">
+	<meta name="keywords"
+		content="Indian restaurant USA, authentic Indian food, best Indian cuisine, Indian dining experience, vegetarian Indian food, Indian spices, traditional Indian dishes" />
+	<meta name="description"
+		content="Experience the rich flavors of India at Khana Khajana, an authentic restaurant in the USA. Enjoy traditional Indian dishes made with fresh ingredients and love.">
+	<meta name="author" content="Khana Khajana">
 
 	<!-- Favicon -->
 	<meta property="og:image" content="img/apple-touch-icon.png">
