--- a/menu.html
+++ b/menu.html
@@ -7,11 +7,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Menu</title>
+	<title>Indian Vegetarian Menu | Khana Khajana USA</title>
 
-	<meta name="keywords" content="WebSite Template" />
-	<meta name="description" content="Porto - Multipurpose Website Template">
-	<meta name="author" content="okler.net">
+	<meta name="keywords"
+		content="Indian menu USA, vegetarian Indian dishes, best Indian food, Indian curries, Indian street food, traditional Indian spices, Indian cuisine" />
+	<meta name="description"
+		content="Explore the flavorful vegetarian menu at Khana Khajana! From aromatic curries to street food delights, enjoy the best Indian dishes made with fresh ingredients and traditional spices.">
+	<meta name="author" content="Khana Khajana">
 
 	<!-- Favicon -->
 	<meta property="og:image" content="img/apple-touch-icon.png">
