--- a/404.html
+++ b/404.html
@@ -238,9 +238,9 @@
 								us now</strong>
 							<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone : (123)
 								456-789</a></br>
-							<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com" target="_blank"
+							<a href="https://mail.google.com/mail/?view=cm&to=khanakhazananj@gmail.com" target="_blank"
 								class="text-decoration-none custom-text-color-2">
-								Email: khanakhazanaNj@gmail.com
+								Email: khanakhazananj@gmail.com
 							</a>
 						</p>
 					</div>
