--- a/contact-us.html
+++ b/contact-us.html
@@ -184,14 +184,13 @@
 
 			<section
 				class="page-header page-header-modern page-header-background page-header-background-sm parallax overlay overlay-color-dark overlay-show overlay-op-1 my-0"
-				data-plugin-parallax data-plugin-options="{'speed': 1.5}"
-				data-image-src="img/demos/church/about-us/about-us-parallax-1.jpg">
+				data-plugin-parallax data-plugin-options="{'speed': 1.5}" data-image-src="img/slider/h4.jpg">
 				<div class="container">
 					<div class="row my-5">
 						<div class="col-md-12 align-self-center text-center">
-							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold mb-1">Who We Are
+							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold mb-1">Contact Us
 							</h1>
-							<p class="text-color-light custom-secondary-font text-uppercase mb-0">About Us</p>
+							<p class="text-color-light custom-secondary-font text-uppercase mb-0">Get in Touch</p>
 						</div>
 					</div>
 				</div>
@@ -315,9 +314,9 @@
 									us now</strong>
 								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
 									+1 732 366 9116</a></br>
-								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com"
+								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazananj@gmail.com"
 									target="_blank" class="text-decoration-none custom-text-color-2">
-									Email: khanakhazanaNj@gmail.com
+									Email: khanakhazananj@gmail.com
 								</a>
 							</p>
 						</div>
