--- a/gallery.html
+++ b/gallery.html
@@ -181,17 +181,19 @@
 		</header>
 
 		<div role="main" class="main">
-
-			<section class="page-header page-header-modern bg-color-secondary page-header-lg mb-0">
+			<section
+				class="page-header page-header-modern page-header-background page-header-background-sm parallax overlay overlay-color-dark overlay-show overlay-op-1 my-0"
+				data-plugin-parallax data-plugin-options="{'speed': 1.5}" data-image-src="img/slider/h3.jpg">
 				<div class="container">
-					<div class="row my-4">
+					<div class="row my-5">
 						<div class="col-md-12 align-self-center text-center">
-							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold my-4">Gallery</h1>
+							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold mb-1">Gallery
+							</h1>
+							<p class="text-color-light custom-secondary-font text-uppercase mb-0">A Visual Journey</p>
 						</div>
 					</div>
 				</div>
 			</section>
-
 			<section class="section section-no-border bg-color-light m-0">
 				<div class="container">
 					<div class="row">
@@ -212,20 +214,20 @@
 					<div class="row" data-plugin-masonry data-plugin-options="{'itemSelector': '.col-lg-4'}">
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
+								<a data-href="ajax/nastha-junction.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-1.jpg" alt class="img-fluid" />
+										<img src="img/gallery/nastha.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
+											<a data-href="ajax/nastha-junction.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Baptism
+												Nashta Junction
 											</a>
 										</h2>
 									</span>
@@ -234,20 +236,20 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
+								<a data-href="ajax/gujju-bhai.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-2.jpg" alt class="img-fluid" />
+										<img src="img/gallery/gujju.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
+											<a data-href="ajax/gujju-bhai.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Wedding
+												Gujju Bhai
 											</a>
 										</h2>
 									</span>
@@ -256,20 +258,20 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
+								<a data-href="ajax/shake.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-3.jpg" alt class="img-fluid" />
+										<img src="img/gallery/shake.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
+											<a data-href="ajax/shake.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Church Community
+												Abhi Shake
 											</a>
 										</h2>
 									</span>
@@ -278,20 +280,20 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
+								<a data-href="ajax/soup.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-4.jpg" alt class="img-fluid" />
+										<img src="img/gallery/soup.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
+											<a data-href="ajax/soup.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Wedding
+												Soup-E-Ishq
 											</a>
 										</h2>
 									</span>
@@ -300,20 +302,20 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
+								<a data-href="ajax/extra.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-5.jpg" alt class="img-fluid" />
+										<img src="img/gallery/side.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
+											<a data-href="ajax/extra.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Church Community
+												Side Ya Extra
 											</a>
 										</h2>
 									</span>
@@ -322,20 +324,20 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
+								<a data-href="ajax/china.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-6.jpg" alt class="img-fluid" />
+										<img src="img/gallery/china.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
+											<a data-href="ajax/china.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Baptism
+												China Gate
 											</a>
 										</h2>
 									</span>
@@ -344,20 +346,20 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
+								<a data-href="ajax/punjab.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-7.jpg" alt class="img-fluid" />
+										<img src="img/gallery/punjab.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
+											<a data-href="ajax/punjab.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Baptism
+												Punjab Da Rang
 											</a>
 										</h2>
 									</span>
@@ -366,20 +368,20 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
+								<a data-href="ajax/naan.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-8.jpg" alt class="img-fluid" />
+										<img src="img/gallery/naan.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
+											<a data-href="ajax/naan.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Wedding
+												Naan Stop
 											</a>
 										</h2>
 									</span>
@@ -388,20 +390,42 @@
 						</div>
 						<div class="col-lg-4">
 							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
+								<a data-href="ajax/rice.html"
 									class="text-decoration-none custom-secondary-font text-color-dark"
 									data-ajax-on-page>
 									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-9.jpg" alt class="img-fluid" />
+										<img src="img/gallery/rice.jpg" alt class="img-fluid" />
 									</span>
 								</a>
 								<span class="thumb-info-caption custom-box-shadow">
 									<span class="thumb-info-caption-text">
 										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
+											<a data-href="ajax/rice.html"
 												class="text-decoration-none custom-secondary-font text-color-dark"
 												data-ajax-on-page>
-												Church Community
+												Dal & Rice Ka Funda
+											</a>
+										</h2>
+									</span>
+								</span>
+							</span>
+						</div>
+						<div class="col-lg-4">
+							<span class="thumb-info custom-thumb-info-4">
+								<a data-href="ajax/sweet.html"
+									class="text-decoration-none custom-secondary-font text-color-dark"
+									data-ajax-on-page>
+									<span class="thumb-info-wrapper">
+										<img src="img/gallery/sweet.jpg" alt class="img-fluid" />
+									</span>
+								</a>
+								<span class="thumb-info-caption custom-box-shadow">
+									<span class="thumb-info-caption-text">
+										<h2 class="font-weight-bold text-5 text-center">
+											<a data-href="ajax/sweet.html"
+												class="text-decoration-none custom-secondary-font text-color-dark"
+												data-ajax-on-page>
+												HALWA-E-AUM
 											</a>
 										</h2>
 									</span>
@@ -416,15 +440,16 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-10">
-							<span class="custom-secondary-font font-weight-bold custom-text-color-1 text-4">First time
-								visitor</span>
-							<h2 class="font-weight-bold custom-text-color-1 m-0">Find out more about the Church. <span
-									class="font-weight-normal custom-secondary-font custom-font-italic">You belong
-									here</span></h2>
+							<span class="custom-secondary-font font-weight-bold custom-text-color-1 text-4">Reserve Your
+								Table</span>
+							<h2 class="font-weight-bold custom-text-color-1 m-0">Enjoy a delightful dining experience.
+								<span class="font-weight-normal custom-secondary-font custom-font-italic">Book your
+									table now!</span>
+							</h2>
 						</div>
 						<div class="col-lg-2 mt-4 mt-lg-0">
-							<a href="about-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Visitors
-								Guide</a>
+							<a href="contact-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Reserve
+								Now</a>
 						</div>
 					</div>
 				</div>
@@ -470,9 +495,9 @@
 									us now</strong>
 								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
 									+1 732 366 9116</a></br>
-								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com"
+								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazananj@gmail.com"
 									target="_blank" class="text-decoration-none custom-text-color-2">
-									Email: khanakhazanaNj@gmail.com
+									Email: khanakhazananj@gmail.com
 								</a>
 							</p>
 						</div>
