--- a/about-us.html
+++ b/about-us.html
@@ -184,14 +184,13 @@
 
 			<section
 				class="page-header page-header-modern page-header-background page-header-background-sm parallax overlay overlay-color-dark overlay-show overlay-op-1 my-0"
-				data-plugin-parallax data-plugin-options="{'speed': 1.5}"
-				data-image-src="img/demos/church/about-us/about-us-parallax-1.jpg">
+				data-plugin-parallax data-plugin-options="{'speed': 1.5}" data-image-src="img/slider/h1.jpg">
 				<div class="container">
 					<div class="row my-5">
 						<div class="col-md-12 align-self-center text-center">
-							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold mb-1">Who We Are
+							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold mb-1">About Us
 							</h1>
-							<p class="text-color-light custom-secondary-font text-uppercase mb-0">About Us</p>
+							<p class="text-color-light custom-secondary-font text-uppercase mb-0">Discover Our Story</p>
 						</div>
 					</div>
 				</div>
@@ -203,7 +202,8 @@
 						<div class="col-lg-7 col-sm-7">
 							<h2 class="font-weight-bold">Namaste & Welcome to Khana Khazana
 							</h2>
-							<p>At Khana Khazana, we take pride in celebrating the rich, diverse heritage of Indian
+							<p>At <b>Khana Khazana</b>, we take pride in celebrating the rich and diverse heritage of
+								Indian
 								cuisine. Our passion lies in bringing authentic flavors, vibrant spices, and
 								time-honored cooking techniques to food lovers worldwide. True to our name, which means
 								“Treasure of Food,” we are committed to crafting exceptional vegetarian dishes that
@@ -212,25 +212,29 @@
 							<h2 class="font-weight-bold">
 								Our Culinary Visionaries
 							</h2>
-							<p class="text-2">Chef Abhishek Patel and Chef Daxesh Shah, the creative minds behind Khana
-								Khazana, are culinary artisans dedicated to showcasing the essence of Indian flavors.
-								With years of expertise in the art of cooking, they bring an unparalleled level of
-								craftsmanship to every dish. Under their leadership, our kitchen is a space where
-								traditional recipes are thoughtfully reimagined with contemporary finesse, delivering a
-								truly unique and unforgettable dining experience.
-
+							<p class="text-2">The creative minds behind <b>Khana Khazana</b>, <b>Chef Abhishek Patel</b>
+								and <b>Chef
+									Daxesh Shah</b>, are culinary artisans dedicated to showcasing the essence of Indian
+								flavors. With years of expertise in the art of cooking, they bring an unparalleled level
+								of craftsmanship to every dish.
 							</p>
+							<p> Under their leadership, our kitchen is a space where traditional recipes are
+								thoughtfully reimagined with contemporary finesse. Their passion for Indian cuisine
+								drives them to innovate while preserving the authenticity that makes every meal at Khana
+								Khazana a truly unique and unforgettable dining experience.</p>
+							<h2 class="font-weight-bold">
+								Join Us for a Culinary Adventure!
+							</h2>
+							<p>Step into <b>Khana Khazana</b> and indulge in a feast of flavors that take you on a journey
+								across India. Whether you’re craving the richness of creamy Paneer Butter Masala, the
+								comforting warmth of Dal Tadka, or the crispy goodness of Masala Dosas, we have
+								something for everyone.</p>
+							<p>We look forward to serving you and making every meal a cherished memory. <b> Namaste &
+									Happy
+									Dining!</b></p>
 						</div>
 						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
-							<div class="custom-box-squares">
-								<img class="custom-cloud left-pos-2" alt src="img/demos/church/others/left-cloud.png" />
-								<div class="custom-big-square left-pos-2 custom-box-shadow"
-									style="background: url('img/demos/church/others/big-left-square-img.jpg'); background-size: cover;">
-								</div>
-								<div class="custom-small-square left-pos-2 custom-box-shadow"
-									style="background: url('img/demos/church/others/small-left-square-img.jpg'); background-size: cover;">
-								</div>
-							</div>
+							<img class="img-fluid" alt="about1" src="img/about/a1.jpg" />
 						</div>
 					</div>
 				</div>
@@ -247,7 +251,7 @@
 					</div>
 					<div class="row justify-content-center text-center">
 						<div class="col-lg-6 col-sm-8 mb-4 mb-lg-0">
-							<img src="img/demos/church/icons/custom-icon-2.png" alt class="img-repsonsive" />
+							<img src="img/icons/custom-icon-2.png" alt class="img-repsonsive" />
 							<h2 class="font-weight-bold text-color-light">Our Vision</h2>
 							<p class="custom-text-color-2"><strong class="text-color-light">Spreading the Magic of
 									Indian Vegetarian Cuisine.
@@ -255,7 +259,7 @@
 								blending authenticity, innovation, and passion in every dish.</p>
 						</div>
 						<div class="col-lg-6 col-sm-8">
-							<img src="img/demos/church/icons/custom-icon-3.png" alt class="img-repsonsive" />
+							<img src="img/icons/custom-icon-3.png" alt class="img-repsonsive" />
 							<h2 class="font-weight-bold text-color-light">Our Mission</h2>
 							<p class="custom-text-color-2">
 								<strong class="text-color-light">Redefining Indian Vegetarian Dining.
@@ -267,49 +271,48 @@
 
 				</div>
 			</section>
-			<section class="section section-no-border bg-color-light m-0">
+			<section class="section section-no-border bg-color-light">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
-							<div class="custom-box-squares">
-								<img class="custom-cloud left-pos-2" alt src="img/demos/church/others/left-cloud.png" />
-								<div class="custom-big-square left-pos-2 custom-box-shadow"
-									style="background: url('img/demos/church/others/big-left-square-img.jpg'); background-size: cover;">
-								</div>
-								<div class="custom-small-square left-pos-2 custom-box-shadow"
-									style="background: url('img/demos/church/others/small-left-square-img.jpg'); background-size: cover;">
-								</div>
-							</div>
+						<div class="col-lg-5 col-sm-5">
+							<img alt="about 2" class="img-fluid" src="img/about/a2.jpg" />
 						</div>
 						<div class="col-lg-7 col-sm-7">
-							<h2 class="font-weight-bold">A Commitment to Authenticity & Excellence
+							<div>
+								<h2 class="font-weight-bold">A Commitment to Authenticity & Excellence
 
-							</h2>
-							<p>Every dish at Khana Khazana is meticulously crafted using the freshest ingredients,
-								hand-selected spices, and a deep understanding of flavors. Our culinary philosophy is
-								rooted in quality, authenticity, and creativity, ensuring that every meal is not only a
-								delight to the taste buds but also a nourishing experience for the soul. Our dedication
-								to excellence allows us to present dishes that harmoniously blend tradition with modern
-								innovation, offering a culinary journey like no other.
+								</h2>
+								<p>Every dish at Khana Khazana is meticulously crafted using the freshest ingredients,
+									hand-selected spices, and a deep understanding of flavors. Our culinary philosophy
+									is
+									rooted in quality, authenticity, and creativity, ensuring that every meal is not
+									only a
+									delight to the taste buds but also a nourishing experience for the soul. Our
+									dedication
+									to excellence allows us to present dishes that harmoniously blend tradition with
+									modern
+									innovation, offering a culinary journey like no other.
 
-							</p>
-							<h2 class="font-weight-bold">
-								A Journey Through Flavors
-							</h2>
-							<p class="text-2">At Khana Khazana, we invite you on a gastronomic adventure where every
-								bite tells a story, every flavor transports you to the heart of India, and every dish is
-								a masterpiece. Join us in experiencing the magic of Indian cuisine—where tradition and
-								creativity come together to create an extraordinary celebration of taste.
-							</p>
-							<div class="testimonial-author d-flex justify-content-end">
-								<p>
-									<strong class="text-uppercase">Abhishek Patel & Daxesh Shah
-									</strong>
-									<br>
-									<span class="text-color-primary"> - Founders and Executive Chefs</span>
 								</p>
+								<h2 class="font-weight-bold">
+									A Journey Through Flavors
+								</h2>
+								<p class="text-2">At Khana Khazana, we invite you on a gastronomic adventure where every
+									bite tells a story, every flavor transports you to the heart of India, and every
+									dish is
+									a masterpiece. Join us in experiencing the magic of Indian cuisine—where tradition
+									and
+									creativity come together to create an extraordinary celebration of taste.
+								</p>
+								<div class="testimonial-author d-flex justify-content-end">
+									<p>
+										<strong class="text-uppercase">Abhishek Patel & Daxesh Shah
+										</strong>
+										<br>
+										<span class="text-color-primary"> - Founders and Executive Chefs</span>
+									</p>
+								</div>
 							</div>
-
 						</div>
 
 
@@ -360,9 +363,9 @@
 									us now</strong>
 								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
 									+1 732 366 9116</a></br>
-								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com"
+								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazananj@gmail.com"
 									target="_blank" class="text-decoration-none custom-text-color-2">
-									Email: khanakhazanaNj@gmail.com
+									Email: khanakhazananj@gmail.com
 								</a>
 							</p>
 						</div>
