--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				<div class="owl-stage-outer">
 					<div class="owl-stage">
 						<div class="owl-item position-relative overflow-hidden"
-							style="background-image: url(img/demos/church/slides/slide-1.jpg); background-size: cover; background-position: center; background-position: center;">
+							style="background-image: url(img/slider/1.jpg); background-size: cover; background-position: center; background-position: center;">
 							<div class="container position-relative z-index-3 h-100">
 								<div class="row align-items-center justify-content-center h-100">
 									<div class="col-lg-7">
@@ -208,7 +208,7 @@
 						</div>
 						<!-- Carousel Slide 1 -->
 						<div class="owl-item position-relative overflow-hidden"
-							style="background-image: url(img/demos/church/slides/slide-1.jpg); background-size: cover; background-position: center; background-position: center;">
+							style="background-image: url(img/slider/2.jpg); background-size: cover; background-position: center; background-position: center;">
 							<div class="container position-relative z-index-3 h-100">
 								<div class="row align-items-center justify-content-center h-100">
 									<div class="col-lg-7">
@@ -231,7 +231,7 @@
 
 						<!-- Carousel Slide 2 -->
 						<div class="owl-item position-relative overflow-hidden"
-							style="background-image: url(img/demos/church/slides/slide-2.jpg); background-size: cover; background-position: center; background-position: center;">
+							style="background-image: url(img/slider/3.jpg); background-size: cover; background-position: center; background-position: center;">
 							<div class="container position-relative z-index-3 h-100">
 								<div class="row align-items-center justify-content-center h-100">
 									<div class="col-lg-7">
@@ -282,29 +282,29 @@
 				class="section section-no-border custom-position-relative custom-section-padding-1 bg-color-light m-0">
 				<img class="custom-cloud left-pos d-none d-md-block appear-animation"
 					data-appear-animation="customFadeInLeftNoRotate" data-appear-animation-delay="0"
-					data-plugin-options="{'accY': -300}" src="img/demos/church/others/left-cloud.png" alt />
+					data-plugin-options="{'accY': -300}" src="img/home/left-cloud.png" alt />
 				<div class="custom-big-square left-pos d-none d-md-block custom-box-shadow appear-animation"
 					data-appear-animation="customFadeInLeft" data-appear-animation-delay="500"
 					data-plugin-options="{'accY': -300}"
-					style="background: url('img/demos/church/others/big-left-square-img.jpg'); background-size: cover;">
+					style="background: url('img/home/big-left-square-img.jpg'); background-size: cover;">
 				</div>
 				<div class="custom-small-square left-pos d-none d-md-block custom-box-shadow appear-animation"
 					data-appear-animation="customFadeInLeft" data-appear-animation-delay="1000"
 					data-plugin-options="{'accY': -300}"
-					style="background: url('img/demos/church/others/small-left-square-img.jpg'); background-size: cover;">
+					style="background: url('img/home/small-left-square-img.jpg'); background-size: cover;">
 				</div>
 				<img class="custom-cloud right-pos d-none d-md-block appear-animation"
 					data-appear-animation="customFadeInRightNoRotate" data-appear-animation-delay="0"
-					data-plugin-options="{'accY': -300}" src="img/demos/church/others/right-cloud.png" alt />
+					data-plugin-options="{'accY': -300}" src="img/home/right-cloud.png" alt />
 				<div class="custom-big-square right-pos d-none d-md-block custom-box-shadow appear-animation"
 					data-appear-animation="customFadeInRight" data-appear-animation-delay="500"
 					data-plugin-options="{'accY': -300}"
-					style="background: url('img/demos/church/others/big-right-square-img.jpg'); background-size: cover;">
+					style="background: url('img/home/big-right-square-img.jpg'); background-size: cover;">
 				</div>
 				<div class="custom-small-square right-pos d-none d-md-block custom-box-shadow appear-animation"
 					data-appear-animation="customFadeInRight" data-appear-animation-delay="1000"
 					data-plugin-options="{'accY': -300}"
-					style="background: url('img/demos/church/others/small-right-square-img.jpg'); background-size: cover;">
+					style="background: url('img/home/small-right-square-img.jpg'); background-size: cover;">
 				</div>
 				<div class="container">
 					<div class="row justify-content-center text-center">
@@ -342,44 +342,74 @@
 								<div class="owl-carousel-wrapper" style="height: 329.77px;">
 									<div class="carousel-half-full-width-wrapper carousel-half-full-width-right">
 										<div class="owl-carousel owl-theme carousel-half-full-width-right carousel-shadow-1 nav-bottom nav-bottom-align-left nav-style-1 nav-arrows-thin nav-dark nav-font-size-lg mb-0"
-											data-plugin-options="{'responsive': {'0': {'items': 1}, '576': {'items': 2}, '768': {'items': 3}, '992': {'items': 4}, '1200': {'items': 4}}, 'loop': false, 'nav': true, 'dots': false, 'margin': 20}">
+											data-plugin-options="{'responsive': {'0': {'items': 1}, '576': {'items': 2}, '768': {'items': 3}, '992': {'items': 4}, '1200': {'items': 4}}, 'loop': true,'autoplay':true,'nav': true, 'dots': false, 'margin': 20}">
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
-													href="img/gallery/1.jpg">
-													<img src="img/gallery/1.jpg"
-														class="img-fluid box-shadow-4 rounded-0"
+													href="img/gallery/nastha.jpg">
+													<img src="img/gallery/nastha.jpg" class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
-													href="img/gallery/3.jpg">
-													<img src="img/gallery/3.jpg"
-														class="img-fluid box-shadow-4 rounded-0"
+													href="img/gallery/gujju.jpg">
+													<img src="img/gallery/gujju.jpg" class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
-													href="img/gallery/8.jpg">
-													<img src="img/gallery/8.jpg"
-														class="img-fluid box-shadow-4 rounded-0"
+													href="img/gallery/shake.jpg">
+													<img src="img/gallery/shake.jpg" class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
-													href="img/gallery/9.jpg">
-													<img src="img/gallery/9.jpg"
-														class="img-fluid box-shadow-4 rounded-0"
+													href="img/gallery/soup.jpg">
+													<img src="img/gallery/soup.jpg" class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
-													href="img/gallery/14.jpg">
-													<img src="img/gallery/14.jpg"
-														class="img-fluid box-shadow-4 rounded-0"
+													href="img/gallery/side.jpg">
+													<img src="img/gallery/side.jpg" class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/china.jpg">
+													<img src="img/gallery/china.jpg" class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/punjab.jpg">
+													<img src="img/gallery/punjab.jpg" class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/naan.jpg">
+													<img src="img/gallery/naan.jpg" class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/rice.jpg">
+													<img src="img/gallery/rice.jpg" class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/sweet.jpg">
+													<img src="img/gallery/sweet.jpg" class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
@@ -389,6 +419,8 @@
 							</div>
 						</div>
 					</div>
+					<a href="gallery.html" class="btn btn-primary custom-btn-style-1 text-center text-uppercase mt-4">View
+						More</a>
 				</div>
 			</section>
 			<section class="section section-secondary section-no-border m-0">
@@ -404,7 +436,7 @@
 					<div class="row justify-content-center text-center">
 
 						<div class="col-lg-6 col-sm-8 mb-4 mb-lg-0">
-							<img src="img/demos/church/icons/custom-icon-2.png" alt class="img-repsonsive" />
+							<img src="img/icons/custom-icon-2.png" alt class="img-repsonsive" />
 							<h2 class="font-weight-bold text-color-light">Our Vision</h2>
 							<p class="custom-text-color-2"><strong class="text-color-light">Spreading the Magic of
 									Indian Vegetarian Cuisine.
@@ -412,7 +444,7 @@
 								blending authenticity, innovation, and passion in every dish.</p>
 						</div>
 						<div class="col-lg-6 col-sm-8">
-							<img src="img/demos/church/icons/custom-icon-3.png" alt class="img-repsonsive" />
+							<img src="img/icons/custom-icon-3.png" alt class="img-repsonsive" />
 							<h2 class="font-weight-bold text-color-light">Our Mission</h2>
 							<p class="custom-text-color-2">
 								<strong class="text-color-light">Redefining Indian Vegetarian Dining.
@@ -482,7 +514,7 @@
 
 			<section class="section section-no-border custom-position-relative custom-overflow-hidden p-0 m-0">
 				<div class="custom-view-our-location text-center">
-					<img src="img/demos/church/others/view-our-location.png" alt />
+					<img src="img/view-our-location.png" alt />
 					<a class="custom-view-location custom-secondary-font font-weight-bold text-color-light text-decoration-none"
 						data-bs-toggle="collapse" href="#collapseMap" role="button" aria-expanded="false"
 						aria-controls="collapseMap">View Our Location</a>
@@ -535,9 +567,9 @@
 									us now</strong>
 								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
 									+1 732 366 9116</a></br>
-								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com"
+								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazananj@gmail.com"
 									target="_blank" class="text-decoration-none custom-text-color-2">
-									Email: khanakhazanaNj@gmail.com
+									Email: khanakhazananj@gmail.com
 								</a>
 
 							</p>
