--- a/menu.html
+++ b/menu.html
@@ -181,17 +181,20 @@
 		</header>
 
 		<div role="main" class="main">
-
-			<section class="page-header page-header-modern bg-color-secondary page-header-lg mb-0">
+			<section
+				class="page-header page-header-modern page-header-background page-header-background-sm parallax overlay overlay-color-dark overlay-show overlay-op-1 my-0"
+				data-plugin-parallax data-plugin-options="{'speed': 1.5}" data-image-src="img/slider/h2.jpg">
 				<div class="container">
-					<div class="row my-4">
+					<div class="row my-5">
 						<div class="col-md-12 align-self-center text-center">
-							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold my-4">Menu</h1>
+							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold mb-1">Menu
+							</h1>
+							<p class="text-color-light custom-secondary-font text-uppercase mb-0">Explore Our Offerings
+							</p>
 						</div>
 					</div>
 				</div>
 			</section>
-
 			<section class="section section-no-border bg-color-light m-0">
 				<div class="container">
 					<div class="row">
@@ -261,6 +264,12 @@
 												<img class="img-fluid" src="img/menu/10.jpg" alt="menu-10">
 											</a>
 										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -327,6 +336,12 @@
 										</div>
 										<div>
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/1.jpg">
 												<img class="img-fluid" src="img/menu/1.jpg" alt="menu 1">
 											</a>
@@ -389,6 +404,12 @@
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/10.jpg">
 												<img class="img-fluid" src="img/menu/10.jpg" alt="menu-10">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
 											</a>
 										</div>
 										<div>
@@ -457,6 +478,12 @@
 										</div>
 										<div>
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/1.jpg">
 												<img class="img-fluid" src="img/menu/1.jpg" alt="menu 1">
 											</a>
@@ -524,6 +551,12 @@
 										</div>
 										<div>
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/1.jpg">
 												<img class="img-fluid" src="img/menu/1.jpg" alt="menu 1">
 											</a>
@@ -585,6 +618,12 @@
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/10.jpg">
 												<img class="img-fluid" src="img/menu/10.jpg" alt="menu-10">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
 											</a>
 										</div>
 										<div>
@@ -656,6 +695,12 @@
 										</div>
 										<div>
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/1.jpg">
 												<img class="img-fluid" src="img/menu/1.jpg" alt="menu 1">
 											</a>
@@ -716,6 +761,12 @@
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/10.jpg">
 												<img class="img-fluid" src="img/menu/10.jpg" alt="menu-10">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
 											</a>
 										</div>
 										<div>
@@ -788,6 +839,12 @@
 										</div>
 										<div>
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/1.jpg">
 												<img class="img-fluid" src="img/menu/1.jpg" alt="menu 1">
 											</a>
@@ -853,6 +910,12 @@
 										</div>
 										<div>
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/1.jpg">
 												<img class="img-fluid" src="img/menu/1.jpg" alt="menu 1">
 											</a>
@@ -903,6 +966,84 @@
 											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
 												href="img/menu/9.jpg">
 												<img class="img-fluid" src="img/menu/9.jpg" alt="menu">
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 mb-4 mb-lg-0">
+							<div class="custom-thumb-carousel bg-color-light">
+								<div class="lightbox"
+									data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}, 'mainClass': 'mfp-with-zoom', 'zoom': {'enabled': false, 'duration': 300}}">
+									<div class="owl-carousel owl-theme custom-arrows-style-2"
+										data-plugin-options="{'items': 1, 'loop': false, 'nav': false, 'dots': false}">
+
+
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/11.jpg">
+												<img class="img-fluid" src="img/menu/11.jpg" alt="menu-11">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/1.jpg">
+												<img class="img-fluid" src="img/menu/1.jpg" alt="menu 1">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/2.jpg">
+												<img class="img-fluid" src="img/menu/2.jpg" alt="menu-2">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/3.jpg">
+												<img class="img-fluid" src="img/menu/3.jpg" alt="menu-3">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/4.jpg">
+												<img class="img-fluid" src="img/menu/4.jpg" alt="menu">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/5.jpg">
+												<img class="img-fluid" src="img/menu/5.jpg" alt="menu-5">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/6.jpg">
+												<img class="img-fluid" src="img/menu/6.jpg" alt="menu-6">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/7.jpg">
+												<img class="img-fluid" src="img/menu/7.jpg" alt="menu-7">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/8.jpg">
+												<img class="img-fluid" src="img/menu/8.jpg" alt="menu">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/9.jpg">
+												<img class="img-fluid" src="img/menu/9.jpg" alt="menu">
+											</a>
+										</div>
+										<div>
+											<a class="img-thumbnail d-block img-thumbnail-hover-icon"
+												href="img/menu/10.jpg">
+												<img class="img-fluid" src="img/menu/10.jpg" alt="menu-10">
 											</a>
 										</div>
 									</div>
@@ -917,20 +1058,33 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-10">
-							<span class="custom-secondary-font font-weight-bold custom-text-color-1 text-4">First time
-								visitor</span>
-							<h2 class="font-weight-bold custom-text-color-1 m-0">Find out more about the Church. <span
-									class="font-weight-normal custom-secondary-font custom-font-italic">You belong
-									here</span></h2>
+							<span class="custom-secondary-font font-weight-bold custom-text-color-1 text-4">Reserve Your
+								Table</span>
+							<h2 class="font-weight-bold custom-text-color-1 m-0">Enjoy a delightful dining experience.
+								<span class="font-weight-normal custom-secondary-font custom-font-italic">Book your
+									table now!</span></h2>
 						</div>
 						<div class="col-lg-2 mt-4 mt-lg-0">
-							<a href="about-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Visitors
-								Guide</a>
+							<a href="contact-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Reserve
+								Now</a>
 						</div>
 					</div>
 				</div>
 			</section>
-
+			<section class="section section-no-border custom-position-relative custom-overflow-hidden p-0 m-0">
+				<div class="custom-view-our-location text-center">
+					<img src="img/view-our-location.png" alt />
+					<a class="custom-view-location custom-secondary-font font-weight-bold text-color-light text-decoration-none"
+						data-bs-toggle="collapse" href="#collapseMap" role="button" aria-expanded="false"
+						aria-controls="collapseMap">View Our Location</a>
+				</div>
+				<div class="collapse" id="collapseMap">
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1512.2010484008113!2d-74.01076740613573!3d40.70916397051168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1771eaaaab%3A0x9a6b6f79ec166688!2sKhana%20Khazana%20Food%20Cart!5e0!3m2!1sen!2sin!4v1738923601757!5m2!1sen!2sin"
+						height="400" width="2210" style="border:0;" allowfullscreen="" loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</section>
 			<footer id="footer" class="bg-color-secondary custom-footer m-0">
 				<div class="container pt-5">
 					<div class="row text-center">
@@ -971,9 +1125,9 @@
 									us now</strong>
 								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
 									+1 732 366 9116</a></br>
-								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com"
+								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazananj@gmail.com"
 									target="_blank" class="text-decoration-none custom-text-color-2">
-									Email: khanakhazanaNj@gmail.com
+									Email: khanakhazananj@gmail.com
 								</a>
 							</p>
 						</div>
