--- a/gallery.html
+++ b/gallery.html
@@ -471,8 +471,7 @@
 							<i class="fas fa-map-marker-alt text-color-primary custom-icon-size-1"></i>
 							<p class="custom-text-color-2 alternative-font-4 text-3-5">
 								<strong
-									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Porto
-									Church</strong>
+									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Address</strong>
 								Porto Church 123 Porto Blvd, </br>Suite 100 New York, NY
 							</p>
 						</div>
