--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 				</div>
 				<div class="collapse" id="collapseMap">
 					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1512.2010484008113!2d-74.01076740613573!3d40.70916397051168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1771eaaaab%3A0x9a6b6f79ec166688!2sKhana%20Khazana%20Food%20Cart!5e0!3m2!1sen!2sin!4v1738923601757!5m2!1sen!2sin"
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.3388263033219!2d-74.50703010360981!3d40.535030206409516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3c0b6c36d0c23%3A0x25bb4a76e213a472!2s1760%20Easton%20Ave%2C%20Somerset%2C%20NJ%2008873%2C%20USA!5e0!3m2!1sen!2sin!4v1739267300271!5m2!1sen!2sin"
 						height="400" width="2210" style="border:0;" allowfullscreen="" loading="lazy"
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
