--- a/index.html
+++ b/index.html
@@ -346,70 +346,80 @@
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/nastha.jpg">
-													<img src="img/gallery/nastha.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/nastha.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/gujju.jpg">
-													<img src="img/gallery/gujju.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/gujju.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/shake.jpg">
-													<img src="img/gallery/shake.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/shake.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/soup.jpg">
-													<img src="img/gallery/soup.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/soup.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/side.jpg">
-													<img src="img/gallery/side.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/side.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/china.jpg">
-													<img src="img/gallery/china.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/china.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/punjab.jpg">
-													<img src="img/gallery/punjab.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/punjab.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/naan.jpg">
-													<img src="img/gallery/naan.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/naan.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/rice.jpg">
-													<img src="img/gallery/rice.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/rice.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/sweet.jpg">
-													<img src="img/gallery/sweet.jpg" class="img-fluid box-shadow-4 rounded-0"
+													<img src="img/gallery/sweet.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
 														alt="Restaurant interior showcase 1" />
 												</a>
 											</div>
@@ -419,8 +429,11 @@
 							</div>
 						</div>
 					</div>
-					<a href="gallery.html" class="btn btn-primary custom-btn-style-1 text-center text-uppercase mt-4">View
-						More</a>
+					<div class="d-flex justify-content-center">
+						<a href="gallery.html"
+							class="btn btn-primary custom-btn-style-1 text-center text-uppercase mt-4">View
+							More</a>
+					</div>
 				</div>
 			</section>
 			<section class="section section-secondary section-no-border m-0">
