--- a/404.html
+++ b/404.html
@@ -155,7 +155,7 @@
 													</a>
 												</li>
 												<li>
-													<a class="nav-link active" href="gallery.html">
+													<a class="nav-link" href="gallery.html">
 														Gallery
 													</a>
 												</li>
@@ -192,7 +192,13 @@
 								<p>We're sorry, but the page you were looking for doesn't exist.</p>
 							</div>
 						</div>
+
 					</div>
+					<div class="d-flex justify-content-center">
+						<a href="home.html" class="btn btn-primary  custom-btn-style-1 text-uppercase mt-4">Learn
+							More</a>
+					</div>
+
 				</section>
 
 			</div>
@@ -215,9 +221,8 @@
 						<i class="fas fa-map-marker-alt text-color-primary custom-icon-size-1"></i>
 						<p class="custom-text-color-2 alternative-font-4 text-3-5">
 							<strong
-								class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Porto
-								Church</strong>
-							Porto Church 123 Porto Blvd, </br>Suite 100 New York, NY
+								class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Address</strong>
+							1760 Easton Ave, Somerset, </br> NJ 08873, United States
 						</p>
 					</div>
 					<div class="col-lg-4 custom-sm-margin-bottom-1">
