--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 								<div class="owl-carousel-wrapper" style="height: 329.77px;">
 									<div class="carousel-half-full-width-wrapper carousel-half-full-width-right">
 										<div class="owl-carousel owl-theme carousel-half-full-width-right carousel-shadow-1 nav-bottom nav-bottom-align-left nav-style-1 nav-arrows-thin nav-dark nav-font-size-lg mb-0"
-											data-plugin-options="{'responsive': {'0': {'items': 1}, '576': {'items': 2}, '768': {'items': 3}, '992': {'items': 4}, '1200': {'items': 4}}, 'loop': true,'autoplay':true,'nav': true, 'dots': false, 'margin': 20}">
+											data-plugin-options="{'responsive': {'0': {'items': 1}, '576': {'items': 2}, '768': {'items': 3}, '992': {'items': 4}, '1200': {'items': 4}}, 'loop': false,'autoplay':true,'nav': true, 'dots': false, 'margin': 20}">
 											<div>
 												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
 													href="img/gallery/nastha.jpg">
@@ -470,7 +470,7 @@
 			</section>
 
 			<section class="section section-background section-no-border m-0"
-				style="background: url(img/demos/church/testimonial/testimonial-bg-1.jpg)">
+				style="background: url(img/testimonial-bg-1.jpg)">
 				<div class="container">
 					<div class="row justify-content-center text-center">
 						<div class="col">
